добавлены иконочные шрифты, почищен css от ненужных свойств, добавлены тестовые примеры для кроссбраузерности

--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="themify-icons.css" rel="stylesheet">
     <title>INTERIOR</title>
 </head>
 
@@ -12,7 +14,7 @@
         <div class="contacts_header">
             <div class="header">
                 <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-                <a href="#"><img class="search" src="img/search.png" alt="search"></a>
+                <a class="search" href="#"><span class="ti-search"></span></a>
                 <ul class="nav_bar">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="products.html">PRODUCTS</a></li>
@@ -20,11 +22,12 @@
                     <li><a href="#">SHOWROOM</a></li>
                     <li><a href="contacts.html">CONTACT</a></li>
                 </ul>
-                <h1>Contact Us</h1> </div>
+                <h1>Contact Us</h1>
+            </div>
         </div>
         <div class="contacts">
             <div class="block">
-                <img src="img/label.png" alt="label">
+                <span><i class="fas fa-map-marker-alt" style="color:black; font-size:45px"></i></span>
                 <h4>California</h4>
                 <h5>Phone</h5>
                 <p>1900 - 1234 -5678</p>
@@ -34,7 +37,7 @@
                 <p><span>12 W 1st St, 90001 Los Angeles, California</span></p>
             </div>
             <div class="block">
-                <img src="img/label.png" alt="label">
+                <span><i class="fas fa-map-marker-alt" style="color:black; font-size:45px"></i></span>
                 <h4>California</h4>
                 <h5>Phone</h5>
                 <p>1900 - 1234 -5678</p>
@@ -44,7 +47,7 @@
                 <p><span>12 W 1st St, 90001 Los Angeles, California</span></p>
             </div>
             <div class="block">
-                <img src="img/label.png" alt="label">
+                <span><i class="fas fa-map-marker-alt" style="color:black; font-size:45px"></i></span>
                 <h4>California</h4>
                 <h5>Phone</h5>
                 <p>1900 - 1234 -5678</p>
@@ -86,7 +89,22 @@
                     <p>&copy; Copyright - INTERIOR 2016. All Rights Reserved.</p>
                 </div>
                 <div class="network_icons">
-                    <a href="#"><img src="img/social-links.png"></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-google-plus-g fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-pinterest-p fa-stack-1x fa-inverse"></i>
+                        </span></a>
                 </div>
                 <div class="docs"> <a href="#">Terms &amp; Conditions / Privacy policy &amp; Cookies</a> </div>
             </div>
