--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>INTERIOR</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="themify-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +14,7 @@
         <div class="header">
             <div class="slider">
                 <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-                <a href="#"><img class="search" src="img/search.png" alt="search"></a>
+                <a class="search" href="#"><span class="ti-search"></span></a>
                 <ul class="nav_bar">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="products.html">PRODUCTS</a></li>
@@ -24,7 +26,7 @@
                     <h3>TRENDING</h3>
                     <h1>Fishnet Chair</h1>
                     <p>Seat and back with upholstery made of cold cure foam. Steel frame,
-                        <br> available in matt powder-coated black</p> <a class="order">Order Us</a>
+                        <br> available in matt powder-coated black</p> <a class="order" href="item_details.html">Order Us</a>
                 </div>
                 <div class="nav_buttons">
                     <a class="nav_button" href="#"></a>
@@ -35,7 +37,7 @@
         </div>
         <div class="sticky_menu">
             <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-            <a href="#"><img class="search" src="img/search.png" alt="search"></a>
+            <a class="search" href="#"><span class="ti-search"></span></a>
             <ul class="nav_bar">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="products.html">PRODUCTS</a></li>
@@ -46,32 +48,32 @@
         </div>
         <div class="item_list1">
             <h2><a href="#">Featured</a></h2>
-            <h2><a href="#">New</a></h2> <a class="explore" href="#">EXPLORE ALL</a>
+            <h2><a href="#"> New</a></h2> <a class="explore" href="products.html">EXPLORE ALL</a>
             <div class="items_small">
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt=">"></a>
+                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt="product"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt="#"></a>
+                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt="product"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="item_details.html" target="_self"><img src="img/arrow1.png" alt="#"></a>
+                        <a class="arrow1" href="item_details.html" target="_self"><img src="img/arrow1.png" alt="product"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="hidden">
-                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt="#"></a>
+                        <a class="arrow1" href="item_details.html"><img src="img/arrow1.png" alt="product"></a>
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
@@ -82,24 +84,24 @@
                     <h3>EXCLUSIVE</h3>
                     <h2>Fishnet Chair</h2>
                     <p>Seat and back with upholstery made of cold cure foam.
-                        <br> Steel frame, available in matt</p> <a class="order">Order Us</a>
+                        <br> Steel frame, available in matt</p> <a class="order" href="item_details.html">Order Us</a>
                 </div>
                 <div class="item">
                     <h3>EXCLUSIVE</h3>
                     <h2>Fishnet Chair</h2>
-                    <p>Seat and back with upholstery made of cold cure foam. <br>Steel frame, available in matt</p> <a class="order">Order Us</a>
+                    <p>Seat and back with upholstery made of cold cure foam. <br>Steel frame, available in matt</p> <a class="order" href="item_details.html">Order Us</a>
                 </div>
             </div>
         </div>
         <div class="item_list2">
-            <h2>Trending Products</h2> <a class="explore" href="#">EXPLORE ALL</a>
+            <h2>Trending Products</h2> <a class="explore" href="products.html">EXPLORE ALL</a>
             <div class="images">
-                <a href="#"><img src="img/product-11.jpg"></a>
-                <a href="#"><img src="img/product-21.jpg"></a>
-                <a href="#"><img src="img/product-31.jpg"></a>
-                <a href="#"><img src="img/product-41.jpg"></a>
-                <a href="#"><img src="img/product-5.jpg"></a>
-                <a href="#"><img src="img/product-6.jpg"></a>
+                <a href="#"><img src="img/product-11.jpg" alt="product"></a>
+                <a href="#"><img src="img/product-21.jpg" alt="product"></a>
+                <a href="#"><img src="img/product-31.jpg" alt="product"></a>
+                <a href="#"><img src="img/product-41.jpg" alt="product"></a>
+                <a href="#"><img src="img/product-5.jpg" alt="product"></a>
+                <a href="#"><img src="img/product-6.jpg" alt="product"></a>
             </div>
         </div>
         <div class="slider2">
@@ -120,13 +122,13 @@
                 <h3>EXCLUSIVE</h3>
                 <h2>Fishnet Chair</h2>
                 <p>Seat and back with upholstery made of cold cure
-                    <br>foam. Steel frame, available in matt</p> 
-                    <a class="order">Order Us</a>
-            </div> 
-            <img src="img/product-2-sm.jpg"> 
-            <img src="img/product-3-sm.jpg"> 
-            <img src="img/product-4-sm.jpg"> 
-            <img src="img/product-5-sm.jpg">
+                    <br>foam. Steel frame, available in matt</p>
+                <a class="order">Order Us</a>
+            </div>
+            <img src="img/product-2-sm.jpg" alt="product">
+            <img src="img/product-3-sm.jpg" alt="product">
+            <img src="img/product-4-sm.jpg" alt="product">
+            <img src="img/product-5-sm.jpg" alt="product">
         </div>
         <div class="mobile_app">
             <h3>mobile app</h3>
@@ -167,7 +169,22 @@
                     <p>&copy; Copyright - INTERIOR 2016. All Rights Reserved.</p>
                 </div>
                 <div class="network_icons">
-                    <a href="#"><img src="img/social-links.png"></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-google-plus-g fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-pinterest-p fa-stack-1x fa-inverse"></i>
+                        </span></a>
                 </div>
                 <div class="docs"> <a href="#">Terms &amp; Conditions / Privacy policy &amp; Cookies</a> </div>
             </div>
