--- a/item_details.html
+++ b/item_details.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>INTERIOR</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="themify-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +14,7 @@
         <div class="header">
             <div class="menu_item_details">
                 <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-                <a href="#"><img class="search" src="img/search.png" alt="search"></a>
+                <a class="search" href="#"><span class="ti-search"></span></a>
                 <ul class="nav_bar">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="products.html">PRODUCTS</a></li>
@@ -31,31 +33,35 @@
             </ul>
         </div>
         <div class="main">
-            <div class="picture"> <img class="big_pic" src="img/slider1.jpg">
-                <div class="small_pic">
-                    <a href="#"><img src="img/controll.jpg"></a>
-                    <a href="#"><img src="img/controll11.jpg"></a>
-                    <a href="#"><img src="img/controll2.jpg"></a>
+            <div class="order_item">
+                <div class="picture">
+                    <img class="big_pic" src="img/slider1.jpg">
+                    <div class="small_pic">
+                        <a href="#"><img src="img/controll.jpg" alt="product"></a>
+                        <a href="#"><img src="img/controll11.jpg" alt="product"></a>
+                        <a href="#"><img src="img/controll2.jpg" alt="product"></a>
+                    </div>
+                </div>
+                <div class="description">
+                    <h3>Fishnet Chair</h3>
+                    <h4>HOT DEAL</h4>
+                    <p class="price"><span>&#36;</span> 36.7 <span>&#8260; sq</span></p> <a class="order">Order Us</a>
+                    <p>The majesty of Mountains - Ugmonk style.</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore </p>
+                    <p>et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
                 </div>
             </div>
-            <div class="description">
-                <h3>Fishnet Chair</h3>
-                <h4>HOT DEAL</h4>
-                <p class="price"><span>&#36;</span> 36.7 <span>&#8260; sq</span></p> <a class="order">Order Us</a>
-                <p>The majesty of Mountains - Ugmonk style.</p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore </p>
-                <p>et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+            <div class="item_list">
+                <h2>Related Products</h2> <a class="explore" href="products.html">EXPLORE ALL</a>
+                <div class="images">
+                    <a href="#"><img src="img/product-11.jpg" alt="product"></a>
+                    <a href="#"><img src="img/product-21.jpg" alt="product"></a>
+                    <a href="#"><img src="img/product-31.jpg" alt="product"></a>
+                </div>
             </div>
         </div>
-        <div class="item_list2">
-            <h2>Related Products</h2> <a class="explore" href="#">EXPLORE ALL</a>
-            <div class="images">
-                <a href="#"><img src="img/product-11.jpg"></a>
-                <a href="#"><img src="img/product-21.jpg"></a>
-                <a href="#"><img src="img/product-31.jpg"></a>
-            </div>
-        </div>
+
         <div class="footer">
             <div class="contact_us">
                 <h4>CONTACT US</h4>
@@ -88,7 +94,22 @@
                     <p>&copy; Copyright - INTERIOR 2016. All Rights Reserved.</p>
                 </div>
                 <div class="network_icons">
-                    <a href="#"><img src="img/social-links.png"></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-google-plus-g fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-pinterest-p fa-stack-1x fa-inverse"></i>
+                        </span></a>
                 </div>
                 <div class="docs"> <a href="#">Terms &amp; Conditions / Privacy policy &amp; Cookies</a> </div>
             </div>
