--- a/products.html
+++ b/products.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="themify-icons.css" rel="stylesheet">
+    
     <title>INTERIOR</title>
 </head>
 
@@ -12,7 +15,7 @@
         <div class="header">
             <div class="catalog_header">
                 <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
-                <a href="#"><img class="search" src="img/search.png" alt="search"></a>
+                <a class="search" href="#"><span class="ti-search"></span></a>
                 <ul class="nav_bar">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="products.html">PRODUCTS</a></li>
@@ -32,7 +35,7 @@
                 <li><a href="#">MODERN</a></li>
                 <li><a href="#">CLASSIC</a></li>
             </ul>
-            <div class="item_pictures"> 
+            <div class="item_pictures">
                 <a href="item_details.html"><img src="img/product-11.jpg" alt="product"></a>
                 <a href="item_details.html"><img src="img/product-21.jpg" alt="product"></a>
                 <a href="item_details.html"><img src="img/product-31.jpg" alt="product"></a>
@@ -46,19 +49,19 @@
                 <a href="item_details.html"><img src="img/product-5.jpg" alt="product"></a>
                 <a href="item_details.html"><img src="img/product-6.jpg" alt="product"></a>
             </div>
-            <a class="load_icon" href="#"><img src="img/load.png" alt="loading"></a>
+            <div class="load_icon"> <a href="#"><i class="fas fa-sync fa-flip-horizontal fa-spin" data-fa-transform="grow-2" style="font-size: 32px; color: #212121"></i></a> </div>
             <div class="items_big">
                 <div class="item">
                     <h3>EXCLUSIVE</h3>
                     <h2>Fishnet Chair</h2>
                     <p>Seat and back with upholstery made of cold cure foam.
-                        <br> Steel frame, available in matt</p> <a class="order">Order Us</a> </div>
+                        <br> Steel frame, available in matt</p> <a class="order" href="item_details.html">Order Us</a>
+                </div>
                 <div class="item">
                     <h3>EXCLUSIVE</h3>
                     <h2>Fishnet Chair</h2>
                     <p>Seat and back with upholstery made of cold cure foam.
-                        <br>Steel frame, available in matt</p>
-                    <a class="order">Order Us</a>
+                        <br>Steel frame, available in matt</p> <a class="order" href="item_details.html">Order Us</a>
                 </div>
             </div>
         </div>
@@ -94,7 +97,22 @@
                     <p>&copy; Copyright - INTERIOR 2016. All Rights Reserved.</p>
                 </div>
                 <div class="network_icons">
-                    <a href="#"><img src="img/social-links.png"></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-google-plus-g fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                    <a href="#"><span class="fa-stack fa-lg" style="font-size: 15px">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-pinterest-p fa-stack-1x fa-inverse"></i>
+                        </span></a>
                 </div>
                 <div class="docs"> <a href="#">Terms &amp; Conditions / Privacy policy &amp; Cookies</a> </div>
             </div>
