добавлены alt для img недостающие, выявленные после проверки на онлайн валидаторе

--- a/item_details.html
+++ b/item_details.html
@@ -35,7 +35,7 @@
         <div class="main">
             <div class="order_item">
                 <div class="picture">
-                    <img class="big_pic" src="img/slider1.jpg">
+                    <img class="big_pic" src="img/slider1.jpg" alt="product">
                     <div class="small_pic">
                         <a href="#"><img src="img/controll.jpg" alt="product"></a>
                         <a href="#"><img src="img/controll11.jpg" alt="product"></a>
