--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <h3>mobile app</h3>
             <h1>Find. Follow.<br>Favorite.</h1>
             <p>Save your favorites and share your style.</p>
-            <a href="https://www.apple.com/ru/ios/app-store/" target="_blank"><img src="img/app-store.png"></a>
-            <a href="https://play.google.com/store/apps" target="_blank"><img src="img/google-play.png"></a>
+            <a href="https://www.apple.com/ru/ios/app-store/" target="_blank"><img src="img/app-store.png" alt="app store"></a>
+            <a href="https://play.google.com/store/apps" target="_blank"><img src="img/google-play.png" alt="google play"></a>
         </div>
         <div class="footer">
             <div class="contact_us">
