add test script

--- a/contacts.html
+++ b/contacts.html
@@ -111,5 +111,5 @@
         </div>
     </div>
 </body>
-
+<script type="text/javascript" src="https://campaign.manzanagroup.ru/campaign_test.min.js"></script>
 </html>
