--- a/products.html
+++ b/products.html
@@ -10,6 +10,8 @@
     <title>INTERIOR</title>
 </head>
 
+<script type="text/javascript" src="https://campaign.manzanagroup.ru/campaign_test.min.js"></script>
+
 <body>
     <div class="container">
         <div class="header">
