--- a/item_details.html
+++ b/item_details.html
@@ -9,6 +9,8 @@
     <link href="themify-icons.css" rel="stylesheet">
 </head>
 
+<script type="text/javascript" src="https://campaign.manzanagroup.ru/campaign_test.min.js"></script>
+
 <body>
     <div class="container">
         <div class="header">
