init campaign script

--- a/products.html
+++ b/products.html
@@ -11,6 +11,14 @@
 </head>
 
 <script type="text/javascript" src="https://campaign.manzanagroup.ru/campaign_test.min.js"></script>
+<script type="text/javascript">
+    campaign.init({
+        contactid:"7140fd01603",
+        nonauthcontactid:"6230fd01607",
+        email: "testfromweb@lfflf.ru",
+        phone: "858ff855"
+    });
+</script>
 
 <body>
     <div class="container">
