--- a/contacts.html
+++ b/contacts.html
@@ -112,4 +112,12 @@
     </div>
 </body>
 <script type="text/javascript" src="https://campaign.manzanagroup.ru/campaign_test.min.js"></script>
+<script type="text/javascript">
+    campaign.init({
+        contactid:"7140fd01603",
+        nonauthcontactid:"6230fd01607",
+        email: "testfromweb@lfflf.ru",
+        phone: "858ff855"
+    });
+</script>
 </html>
